--- a/src/index.css
+++ b/src/index.css
@@ -6,5 +6,5 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    /* background-color: black; */
+    /* background-color: lightblue; */
 }
